spacing fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,7 +26,7 @@
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-    padding-top: 160px;
+    padding-top: 100px;
 }
 
 #banner{
@@ -73,7 +73,6 @@
     color: #fff;
     text-decoration: none;
     padding: 20px;
-    margin-top: 10px;
     transition: .4s;
 }
 
@@ -83,7 +82,7 @@
 
 .plyr {
     width: 100%;
-    height: 400px;
+    height: 350px;
 }
 .plyr__video-wrapper{
     padding: 0px !important;
